--- a/Historical Language Comparison with LingPy and EDICTOR.ipynb
+++ b/Historical Language Comparison with LingPy and EDICTOR.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Historical Language Comparison with LingPy and EDICTOR\n",
     "\n",
@@ -13,14 +16,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Historical language comparison for the purpose of identifying cognates and sound correspondences in multilingual wordlists which can later be used to infer phylogenetic trees can be conveniently carried out in a framework of *computer-assisted language comparison* (see http://calc.digling.org), using tools for automatic inference, like LingPy (http://lingpy.org, [List and Forkel 2016](http://bibliography.lingpy.org?key=List2016e), and tools for data annotation and curation, like EDICTOR (http://edictor.digling.org, [List 2017](http://bibliography.lingpy.org?key=List2017d). In this tutorial, we will guide the users through all important steps ranging from data preparation, via data curation, to data export. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 1 Preliminaries\n",
     "\n",
@@ -47,7 +56,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 2 Preparing the Data\n",
     "\n",
@@ -69,7 +81,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 2.1 Data Formats in LingPy and EDICTOR\n",
     "\n",
@@ -448,7 +463,7 @@
     "    <td>162</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>560</td>\n",
+    "    <td>561</td>\n",
     "    <td>Proto-Polynesian</td>\n",
     "    <td>yellow</td>\n",
     "    <td>*reŋareŋa, *felo(-felo)</td>\n",
@@ -465,7 +480,7 @@
     "\n",
     "Let us give a brief introduction to the most important aspects regarding these basic fields (columns) in our example:\n",
     "\n",
-    "1. **```ID```**: requires a numerical value (integer) greater than 0, but not necessarily consecutively ordered (i.e., if you have 5, 10, 10000, all is fine, but you cannot use floats, negative values, or 0).\n",
+    "1. **```ID```**: requires a *unique* numerical value (integer) greater than 0, but not necessarily consecutively ordered (i.e., if you have 5, 10, 10000, all is fine, but you cannot use floats, negative values, or 0).\n",
     "2. **```DOCULECT```**: requires an arbitrary language name and can take virtually any value, but if users plan to export data from LingPy and EDICTOR to other formats, users should make sure that their language names do NOT include any brackest, spaces, and ideally also no other characters than the standard characters from the Latin alphabet. Spaces can be conveniently replaced by underscores ```_```, and brackets can be simply deleted. If users insist on having specific language names, we recommend to add an additional column to their data, where they list the language names as they prefer (with brackets and spaces) but that they allow the software to deal only with those language names which can be easily exported to other data formats.\n",
     "3. **```CONCEPT```**: This value can also be arbitrary, but ideally, users should avoid inconsistencies. Given that EDICTOR works in JavaScript, which means that certain characters may be meaningful which are also included in concepts, we recommend to restrict the concept labels to alphanumerical entries, ideally not using too many brackets, and especially avoiding characters like the greater-smaller-sign (```<>```) or literal quotation marks ```\"```. \n",
     "4. **```VALUE```**: This column is not required by neither LingPy nor EDICTOR, but it is important to show how the data was presented in the original source. As you can see in our example, the values are considerably modified in the columns ```FORM``` and ```TOKENS```. For our format, following the specifications developed for the CLDF initiative (Forkel et al. 2017), we assume that the value is the entry that you find in a source, i.e., a dictionary, and that this may consist of multiple forms. As a result, different ```FORM```-data for the same concept and the same language may show the same value.\n",
@@ -485,7 +500,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 2.2 Orthography Profiles\n",
     "\n",
@@ -513,7 +531,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -538,7 +560,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "What you can see from this small example is that the orthography profile code does essentially two things: it segments the word by treating all those characters as one segment which you listed in the ```Grapheme``` column, and it can further be used to convert those segments automatically, in case you provided an additional column (in our case called ```IPA```). \n",
     "\n",
@@ -548,7 +573,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -566,14 +595,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "You can see from this example, that only the \"a\" is recognized as a valid variant in the string ```catapura```, as the relevant characters are not given in our profile. As a result, you may imagine that it is quite tedious to write an initial orthography profile on your own, specifically when you have not a sound knowledge of the variation in your data.\n",
     "\n",
     "To ease the pain, we have written a script that uses LingPy's rather well-informed algorithm for segmentation and can be used for the initial creation of orthography profiles. We demonstrate the usage with the small example file ```P_input-file.tsv```, which contains a couple of Germanic languages and only two concepts. The file which LingPy creates will be called ```P_profile.tsv```. This code can be run in any commandline, so in contrast to the Python code above, you only need to open a terminal, and type in the following commands:\n",
     "\n",
     "```shell\n",
-    "$ lingpy profile -i data/P_profile-creation.tsv -o data/P_created-profile.tsv --column=ipa\n",
+    "$ lingpy profile -i data/P_input-file.tsv -o data/P_simple-profile.tsv --column=ipa\n",
     "```\n",
     "\n",
     "The resulting profile will look as shown in Table 10.\n",
@@ -600,7 +632,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -632,7 +668,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "You can see, the profile code has successfully converted the data in the file, and if you inspect the file ```P_output-file.tsv``` you will see that an additional column with ```TOKENS``` was added to the file.\n",
     "\n",
@@ -667,6 +706,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -698,7 +740,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 2.4 Automatic Analysis with LingPy\n",
     "\n",
@@ -708,7 +753,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -735,7 +784,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The resulting file looks as shown in Table 13.\n",
     "\n",
@@ -752,7 +804,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -777,7 +833,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The output now looks as shown in Table 14.\n",
     "\n",
@@ -792,7 +851,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 2.5 Enhancing Your Data\n",
     "\n",
@@ -939,6 +1001,8 @@
     "#\t5/5\t100%\t\n",
     "```\n",
     "\n",
+    "\n",
+    "\n",
     "The Concepticon is a collaborative effort that is supposed to render our linguistic data more comparable. The more questionnaires we can add to our collection, the easier it will be for future research to build on these resources. Even if you think that you do not need to link your data to Concepticon, since you anyway use the \"standard list\" by Swadesh, you should at least provide a ```concepts.tsv``` file in which you list your explicit links. In this way you guarantee that other can re-use your data and also contribute to the collaborative efforts which are currently being done in the context of the CLDF initiative.\n",
     "\n",
     "\n",
@@ -948,13 +1012,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 3 Annotating and Data with EDICTOR\n",
     "\n",
     "### 3.1 Overview\n",
     "\n",
-    "The Etymological DICtionary ediTOR (EDICTOR, http://edictor.diglin.org, [List 2017](http://bibliography.lingpy.org?key=List2017d)) is a free, interactive, web-based tool that was specifically designed to serve as an interface between quantitative and qualitative tasks in historical linguistics. Inspired by powerful features of STARLING ([Starostin 2000](http://bibliography.lingpy.org?key=Starostin2000a)) and RefLex ([Segerer and Flavier 2015](http://bibliography.lingpy.org?key=Segerer2015)), expanded by innovative new features, and based on a very simple data model that allows for a direct integration with quantitative software packages like LingPy, the EDICTOR is a lightweight\n",
+    "The Etymological DICtionary ediTOR (EDICTOR, http://edictor.digling.org, [List 2017](http://bibliography.lingpy.org?key=List2017d)) is a free, interactive, web-based tool that was specifically designed to serve as an interface between quantitative and qualitative tasks in historical linguistics. Inspired by powerful features of STARLING ([Starostin 2000](http://bibliography.lingpy.org?key=Starostin2000a)) and RefLex ([Segerer and Flavier 2015](http://bibliography.lingpy.org?key=Segerer2015)), expanded by innovative new features, and based on a very simple data model that allows for a direct integration with quantitative software packages like LingPy, the EDICTOR is a lightweight\n",
     "but powerful toolkit for computer-assisted applications in historical linguistics. \n",
     "\n",
     "The EDICTOR is written in JavaScript and can be used through a simple webbrowser (GoogleChrome and Firefox are the currently supported variants, but we mainly test on Firefox). The fact that the EDICTOR runs in a webbrowser means that it runs virtually on all modern operation systems (Windows, Linux, Mac-OS). It can also be used without an internet connection in Firefox. In order to do so, one only has to download the relevant software from the GitHub repository (https://github.com/digling/edictor) and open the ```index.html``` file in the main package. \n",
@@ -963,7 +1030,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 3.2 Getting Started\n",
     "\n",
@@ -1018,7 +1088,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 3.3 Hands on the Data: The Wordlist Panel\n",
     "\n",
@@ -1057,7 +1130,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 3.4 Finding Cognates: The Cognate Sets Panel\n",
     "\n",
@@ -1109,7 +1185,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 3.5 Enhanced Cognate Annotation: The Partial Cognate Sets Panel\n",
     "\n",
@@ -1148,7 +1227,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "\n",
     "## 4 Analysing Data with EDICTOR\n",
@@ -1158,7 +1240,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 4.1 Inspecting Sounds and Transcriptions: The Phonology Panel\n",
     "\n",
@@ -1173,7 +1258,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "\n",
     "### 4.2 Enhanced Morphological Annotation: The Morphemes Panel\n",
@@ -1224,7 +1312,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 4.3 Analysing Cognate Sets: The Cognate Sets Panel\n",
     "\n",
@@ -1263,7 +1354,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 4.4 Analysing Sound Correspondences: The Correspondences Panel\n",
     "\n",
@@ -1283,7 +1377,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 5 Concluding Remarks"
    ]
@@ -1291,7 +1388,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "I hope that this tutorial has illustrated the usefulness of the EDICTOR tool in combination with Python libraries such as LingPy, the Concepticon API, or the Segments package. More work has to be done and will be done, both in LingPy and the EDICTOR. For those who want to assemble data in form of cognate sets for the purpose of linguistics reconstruction or phylogenetic reconstruction, however, the tools are useful already in their current form.\n",
@@ -1301,7 +1400,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# References\n",
     "\n",
@@ -1388,7 +1490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   },
   "latex_metadata": {
    "affiliation": "Max Planck Institute for the Science of Human History, Jena",
