update tutorial, correct few errors

--- a/Historical Language Comparison with LingPy and EDICTOR.ipynb
+++ b/Historical Language Comparison with LingPy and EDICTOR.ipynb
@@ -1001,6 +1001,33 @@
     "#\t5/5\t100%\t\n",
     "```\n",
     "\n",
+    "As a final example, let us see what the Concepticon API does if we encounter a \"fuzzy\" matching:\n",
+    "\n",
+    "```bash\n",
+    "$ concepticon map_concepts C_concepts-fuzzy.tsv \n",
+    "NUMBER\tENGLISH\tCONCEPTICON_ID\tCONCEPTICON_GLOSS\tSIMILARITY\n",
+    "1\tword\t1599\tWORD\t2\n",
+    "#<<<\t\t\t\t\n",
+    "2\thand / arm\t1277\tHAND\t4\n",
+    "2\thand / arm\t1019\tRIGHT\t4\n",
+    "2\thand / arm\t244\tLEFT\t4\n",
+    "2\thand / arm\t1673\tARM\t4\n",
+    "2\thand / arm\t2121\tARM OR HAND\t4\n",
+    "#>>>\t\t\t\t\n",
+    "3\teggplant\t1146\tAUBERGINE\t2\n",
+    "4\taubergine\t1146\tAUBERGINE\t4\n",
+    "#<<<\t\t\t\t\n",
+    "5\tman (male)\t1554\tMAN\t2\n",
+    "5\tman (male)\t2106\tMALE PERSON\t2\n",
+    "#>>>\t\t\t\t\n",
+    "#\t5/5\t100%\t\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Here, you can see that the concept labels \"hand / arm\" and \"man (male)\" are linked to multiple concept sets. The output further indicates which of those multiple links form a block: The characters \"#<<<\" in a line indicate the start, and the characters \"#>>>\" the end. This allows you to conveniently jump from block to block in order to select the best match (or manually add a better match). Note that mapping to the concepticon should NEVER link one concept in your data to two or more concept sets in the Concepticon. The linking to Concepticon is, as a requirement, always *n* to 1, with *n* ideally being 1 as well. \n",
+    "\n",
+    "<span style=\"color:red\">You may wonder why the API gives you certain similarity scores. For example, why would \"eggplant\" rank higher than \"aubergine\". The reason can be found in the specific mapping algorithm that we use and which may need future refinement. This algorithm essentially divides a \"gloss\" (a concept label) into different parts, and also tries to determine information regarding part of speech and the like. This algorithm is currently being revised, and we hope to be able to provide information soon.</span>\n",
+    "\n",
     "\n",
     "\n",
     "The Concepticon is a collaborative effort that is supposed to render our linguistic data more comparable. The more questionnaires we can add to our collection, the easier it will be for future research to build on these resources. Even if you think that you do not need to link your data to Concepticon, since you anyway use the \"standard list\" by Swadesh, you should at least provide a ```concepts.tsv``` file in which you list your explicit links. In this way you guarantee that other can re-use your data and also contribute to the collaborative efforts which are currently being done in the context of the CLDF initiative.\n",
